# drum-break

./: .gitignore  Cargo.toml  DESIGN.md  DEVELOPMENT.md  README.md  TIL.md  TIME.md  TODO.md  dev-wasm-watch.sh  dev-wasm.sh  index.html  justfile  lint.sh  migrate_loops.py  migrate_loops2.py  migrate_loops3.py  migrate_loops4.py  release-wasm.sh  release.sh  test.sh  wasm-bindgen-macroquad.sh  watch.sh
.github/workflows/: rust.yml  static.yml
assets/loops/: basket_case_verse.json  bulls_on_parade_1.json  bulls_on_parade_2.json  bulls_on_parade_3.json  cup_stacker.json  l1-3a.json  l1-3b.json  l1-3c.json  short_loop.json
docs/: devlog.md  td17-midi-mapping.md
egui_macroquad/: Cargo.toml
egui_miniquad/: Cargo.toml
github_pages/: drum-break.js  index.html  macroix.js
github_pages/assets/loops/: basket_case_verse.json  breakout-l4-r1.json  bulls_on_parade_1b.json  bulls_on_parade_3.json  cup_stacker.json  l1-3.json  l1-3b.json  samba.json  use_me_m1.json  use_me_m2.json
github_pages/res/loops/: breakout-l4-r1.json  bulls_on_parade_1.json  samba.json  use_me_m1.json
res/loops/: breakout-l4-r1.json  bulls_on_parade_1.json  bulls_on_parade_1b.json  bulls_on_parade_2.json  bulls_on_parade_3.json  l1-3.json  l1-3a.json  l1-3b.json  l1-3c.json  samba.json  use_me_m1.json  use_me_m2.json  voices-0.2260570526123047.json
src/: audio.rs  config.rs  consts.rs  egui_ui.rs  events.rs  fps.rs  game.rs  input.rs  keyboard_input_handler.rs  main.rs  midi.rs  midi_input_handler.rs  score.rs  time.rs  ui.rs  voices.rs
