[package]
name = "macroix"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
kira = "0.9"
log = "0.4.21"
egui-macroquad = { version = "0.15.0", default-features = false }
macroquad = { version = "0.3.25", default_features = false }
egui = "0.21.0"

midir = "0.9.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.3"
# fix build error
time = "0.3.36"

# From README:
# > Adding the following snippet to your Cargo.toml ensures that all dependencies compile in release even in debug mode.
# > In macroquad, this has the effect of making images load several times faster and your applications much more performant, while keeping compile times miraculously low.
[profile.dev.package.'*']
opt-level = 3
