[package]
name = "drum-break"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
log = "0.4.21"
# egui-macroquad = { version = "0.15.0", default-features = false }
macroquad = { version = "0.4.4", default-features = false }
egui = {version ="0.28.1", features = ["bytemuck"] }
egui_macroquad = { path = "./egui_macroquad" }

midir = "0.9.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.3"
egui_plot = "0.28.1"
cvars-console-macroquad = "0.3.0" # this uses macroquad 0.4.0 .. is OK or crash?
cvars = "0.4.2"
kira = { version = "0.9.5", default-features = false, features = ["symphonia", "cpal"] }
symphonia = { version = "0.5.4", features = ["wav"] }
web-time = "1.1.0"

# security fix suggested by dependabot
webbrowser = "0.8.3"
include_dir = "0.7.4"

# From README:
# > Adding the following snippet to your Cargo.toml ensures that all dependencies compile in release even in debug mode.
# > In macroquad, this has the effect of making images load several times faster and your applications much more performant, while keeping compile times miraculously low.
#
# Moreover, this same guidance is suggested in by kira: https://tesselode.github.io/kira/installation.html
[profile.dev.package.'*']
opt-level = 3
