[package]
name = "egui_miniquad"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.9"
egui = {version ="0.28.1", features = ["bytemuck"] }
miniquad = { version = "=0.4.5" }
quad-url = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["custom"] }
quad-rand = "0.2.1"

# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.10.0"
